# roc-pulse

./: .clang-format  .gitignore  AUTHORS.md  CHANGES.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: build_pulseaudio.cmake  define_option.cmake  detect_pulseaudio.cmake  detect_source_pulseaudio_version.cmake  detect_system_pulseaudio_version.cmake  download_libtool.cmake  download_pulseaudio.cmake  download_roc.cmake  setup_pulseaudio.cmake  setup_toolchain.cmake
cmake/pkgconfig/: gio-2.0.pc  sndfile.pc
debian/: changelog  control  rules  watch
rpm/: roc-pulse-0.1.5~git_main.spec
script/: build_and_install_roc.sh  download_and_build_pulseaudio.sh  install_system_dependencies.sh
scripts/: download_libtool.sh  download_pulseaudio.sh  download_roc.sh  install_system_dependencies.sh
src/: config.h  module-roc-sink-input.c  module-roc-sink.c  rocpulse_helpers.c  rocpulse_helpers.h
